criando crud de categorias e tentando resolver bug do css do swagger
